<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<TextView  android:id="@+id/ipinfo" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" />

<TextView  android:id="@+id/console" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/ipinfo" />


<Button android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/console"
        android:text="@string/button0" />

<Button android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button0"
        android:layout_below="@id/console"
        android:text="@string/button1" />

<Button android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button1"
        android:layout_below="@id/console"
        android:text="@string/button2" />

<Button android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button2"
        android:layout_below="@id/console"
        android:text="@string/button3" />

<edu.uiuc.ks.vmdmobile.MultiTouchPad android:id="@+id/touchPad"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content"
      android:layout_below="@id/button0"

      android:layout_alignParentLeft="true"
android:layout_alignParentRight="true"
android:layout_alignParentBottom="true"

/>

</RelativeLayout>


